--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "api_app",
+  "name": "b",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-jwt": "^6.1.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.14"
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
