--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
   }
