--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
+    "formik": "^2.2.9",
     "history": "5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
